perf: async segment save/reorder, in-memory order with Save Order button, auto main event badge
- EditSegmentDialog: guard updateSynergyBonus against LazyInitializationException on detached wrestlers
- ShowDetailView: segment save is now fully async (no UI thread blocking on write)
- ShowDetailView: refreshSegmentsGrid is async; initial load no longer triggers redundant second fetch
- ShowDetailView: reorder is in-memory and instant; Save Order button persists only changed rows
- ShowDetailView: only dirty segments (position changed) are written on save, not the full list
- ShowDetailView: main event checkbox removed; last non-Promo segment auto-highlighted with badge
- ShowDetailView: adjudicate, reorder and drag-drop all propagate SecurityContext to async threads
- ShowDetailView: BeforeLeaveObserver warns when navigating away with unsaved order
- BookerJourneyE2ETest: updated testChangeSegmentOrder to click Save Order before verifying DB
- BookerJourneyE2ETest: updated testSetMainEvent to verify badge instead of removed checkbox
- ShowDetailViewTest: updated testSegmentReordering to use moveSegmentInMemory + persistSegmentOrder